# cpf_localization

./: CMakeLists.txt  README.txt
cmake/: FindANN.cmake  FindANN.cmake~  FindFLANN.cmake  FindFLANN.cmake~  FindTheia.cmake
src/: Bundle2Info.cc  CMakeLists.txt  CVPR14out.cc~  acg_he.cc  acg_he_exact_no_spatial.cpp  acg_he_no_twostep.cpp  acg_he_ori_voting.cpp  acg_he_robot.cc  acg_he_same_number_no_spatial.cpp  acg_he_sf.cc  acg_he_sf_iccv.cc  acg_he_sf_iccv_recovermultiple  acg_he_tip_version.cc  cascaded_parallel_filtering.cc  cascaded_parallel_filtering_aachenDayNight.cc  compute_desc_assignments.cc  compute_hamming_threshold.cc  compute_hamming_threshold_128.cc  he_sf_root_sift.cc  he_sf_root_sift_128.cc  p4pf_ransac.cc
src/exif_reader/jhead-2.90/: exif.cc
src/features/: visual_words_handler.cc  visual_words_handler.hh
src/math/: pseudorandomnrgen.cc
src/sfm/: bundler_camera.cc  bundler_camera.hh  parse_bundler.cc  parse_bundler.hh
src/solver/: solverproj.cc  solverproj.hh
